0.14.0.AA (PRE_RELEASE):
-----------------------
- Synced with Upstream v0.14.0
- Syncs Deprecated EFI 1.x Protocols
  * Misc deprecated protocols aligned with UEFI 2.x specs
  * Some are related to filesystem drivers; for which updated versions are created accordingly
- Syncs Misc Upstream Changes/Fixes
  * Adoption of the RefindPlus `FollowSymlinks` Feature
  * 'also_scan_dirs' Volume Specification Bugfix
    - https://sf.net/p/refind/code/ci/fde8116021e1c6ea7edaf3fae15fced47bbb38cf/
    - https://sf.net/p/refind/discussion/general/thread/b411f33f37/
  * Malformed `refind_linux.conf` Freeze Bugfix
    - https://sf.net/p/refind/code/ci/ebe510a5fcdc10fc04f90e0976c47de54b8c767e/
  * Parallel FS Driver GNU-EFI Build Limitation
    - https://sourceforge.net/p/refind/code/ci/dc211965727921bf8e9440fdab5e147795ce9584/
  * Memory leak and garbled JPEG when compiled on some Linux distributions
    - https://sourceforge.net/p/refind/code/ci/8825e5e815b4be3708edd7b8d9fa3ea658094d3b/
  * Apparent Memory Allocation Conflict
    - https://sourceforge.net/p/refind/code/ci/5e2d0ac3fb76a8daab3a8199d0b0c52dc792b84f/
- Improves `AcquireGOP` Feature
  * Now handles uncompressed OptionROMs
  * None encountered to date but theoretically possible
- Improves `AlsoScan` Feature
  * The '@root/boot' path was added to the default 'also_scan_dirs' list
- Improves Generic Menu Handling
  * Now provides a `Return to Main Menu` option on all such menus
- Exposes `MitigatePrimedBuffer` Feature for User Configuration
  * Previously activated by default on all types of firmware
  * A limited base implementation is always active on Non-Apple firmware
  * Can now be extended on by activating a new `mitigate_primed_buffer` token
  * The feature does not operate on Apple firwmare regardless of the token setting


0.13.3.AD (07 Mar 23):
-----------------------
- Fixes Manual Stanza SubMenuEntries
  * A memory conflict meant that including such entries resulted in RefindPlus hanging
- Fixes UGA Graphics